--- a/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -22,6 +22,7 @@ bundled_demos:
       install_directory: ehcache/samples
       manifest:
         - colorcache
+        - hibernate
 bundled_vendors:
    - jetty-6.1.15:
        install_directory: vendors/jetty-6.1.15
