--- a/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
@@ -90,7 +90,7 @@
 
   <build>
     <!-- we dont want the version to be part of the generated war file name -->
-    <finalName>${artifactId}</finalName>
+    <finalName>${name}</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -157,5 +157,18 @@
       </build>
     </profile>
   </profiles>
+
+  <repositories>
+    <repository>
+      <id>terracotta-repository</id>
+      <url>http://www.terracotta.org/download/reflector/maven2</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
 </project>
