--- a/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
@@ -35,9 +35,7 @@
         <groupId>org.mortbay.jetty</groupId>
         <configuration>
           <contextPath>${name}</contextPath>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
           <stopKey>STOP</stopKey>
-          <stopPort>9999</stopPort>
         </configuration>
       </plugin>
     </plugins>
@@ -46,9 +44,23 @@
   <dependencies>
     <dependency>
       <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
+      <artifactId>ehcache-core</artifactId>
       <version>2.0.0-SNAPSHOT</version>
+    </dependency>      
+
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache-terracotta</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <scope>runtime</scope>
+    </dependency>      
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.4.3</version>
     </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
@@ -69,4 +81,50 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <profiles>
+    <profile>
+      <id>9081</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-jetty-plugin</artifactId>
+            <version>6.1.15</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <configuration>
+              <systemProperties>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>9081</value>
+                </systemProperty>
+              </systemProperties>
+              <stopPort>9981</stopPort>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>9082</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-jetty-plugin</artifactId>
+            <version>6.1.15</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <configuration>
+              <systemProperties>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>9082</value>
+                </systemProperty>
+              </systemProperties>
+              <stopPort>9982</stopPort>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
