--- a/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <h2.version>1.1.116</h2.version>
+    <jetty.version>6.1.15</jetty.version>
+    <exec-maven-plugin.version>1.1</exec-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -102,15 +104,14 @@
 
       <plugin>
         <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.15</version>
+        <version>${jetty.version}</version>
         <groupId>org.mortbay.jetty</groupId>
         <configuration>
           <contextPath>${name}</contextPath>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
           <stopKey>STOP</stopKey>
-          <stopPort>9999</stopPort>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>hibernate3-maven-plugin</artifactId>
         <version>2.1</version>
@@ -135,28 +136,6 @@
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>start-h2</id>
-        <build>
-          <plugins>
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <version>1.1</version>
-              <configuration>
-              <mainClass>org.h2.tools.Server</mainClass>
-              <arguments>
-                <argument>-tcp</argument>
-                <argument>-tcpAllowOthers</argument>
-              </arguments>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
   <repositories>
     <repository>
       <id>terracotta-repository</id>
@@ -169,5 +148,88 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <profiles>
+    <profile>
+      <id>start-h2</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>${exec-maven-plugin.version}</version>
+            <configuration>
+              <mainClass>org.h2.tools.Server</mainClass>
+              <arguments>
+                <argument>-tcp</argument>
+                <argument>-tcpAllowOthers</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>stop-h2</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>${exec-maven-plugin.version}</version>
+            <configuration>
+              <mainClass>org.h2.tools.Server</mainClass>
+              <arguments>
+                <argument>-tcpShutdown</argument>
+                <argument>tcp://localhost:9092</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>9081</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-jetty-plugin</artifactId>
+            <version>${jetty.version}</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <configuration>
+              <systemProperties>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>9081</value>
+                </systemProperty>
+              </systemProperties>
+              <stopPort>9981</stopPort>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>9082</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-jetty-plugin</artifactId>
+            <version>${jetty.version}</version>
+            <groupId>org.mortbay.jetty</groupId>
+            <configuration>
+              <systemProperties>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>9082</value>
+                </systemProperty>
+              </systemProperties>
+              <stopPort>9982</stopPort>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
