testing default KitID

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -4,6 +4,7 @@
 ### Start default
 default.IntegrationsLucene=http://www.terracotta.org/confluence/display/docs/Integrating+Terracotta+DSO
 default.IntegrationsWicket=http://www.terracotta.org/confluence/display/docs/Integrating+Terracotta+DSO
+default.Forums=http://forums.terracotta.org/forums/forums/list.page
 default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update-list.properties
 ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
 ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-monitor-update-list.properties
