--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -2,6 +2,8 @@
 
 # This is the properties file for the reflector
 ### Start default
+default.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
+default.Documentation=http://www.terracotta.org/documentation/
 default.IntegrationsLucene=http://www.terracotta.org/confluence/display/docs/Integrating+Terracotta+DSO
 default.IntegrationsWicket=http://www.terracotta.org/confluence/display/docs/Integrating+Terracotta+DSO
 default.Forums=http://forums.terracotta.org/forums/forums/list.page
