--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -13,6 +13,9 @@ ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checke
 quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-update-list.properties
 ### End default
 
+### 3.2.1 
+3.2.1.SessionsExpress=http://www.terracotta.org/documentation/ga/product-documentation
+
 ### 3.2.1 Beta Build Info
 3.2.1.GettingStarted=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
 3.2.1.ReleaseNotes=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
