DEV-3391, optimized ObjectIDSet

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -110,9 +110,8 @@ l2.transactionmanager.passive.throttle.maxSleepSeconds= 5
 # dgc.young.frequencyInMillis - The time in millis between each young gen collection.
 #                               (default : 1 min, not advisable to run more frequently)
 # dgc.faulting.optimization      - This property will not fault in objects that has no references during DGC mark stage
-#                                   0 - disable faulting optimization
-#                                   1 - enabled with standard implementation (continous oids)
-#                                   2 - enabled with compressed implementation (spare oids)
+#                                   false - disable faulting optimization
+#                                   true - enabled with compressed implementation (spare oids)
 # data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db
 #                                     while taking backup
 #
@@ -140,7 +139,7 @@ l2.objectmanager.persistor.measure.performance = false
 l2.objectmanager.dgc.throttle.requestsPerThrottle = 1000
 l2.objectmanager.dgc.young.enabled = false
 l2.objectmanager.dgc.young.frequencyInMillis = 180000
-l2.objectmanager.dgc.faulting.optimization = 2
+l2.objectmanager.dgc.faulting.optimization = true
 l2.data.backup.throttle.timeInMillis = 0
 
 ###########################################################################################
