--- a/dso/branches/3.2/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/3.2/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -300,10 +300,10 @@ l1.jvm.check.compatibility = true
 ###########################################################################################
 l1.modules.repositories =
 l1.modules.default = \
-  org.terracotta.modules.excludes-config;bundle-version:=3.2.1.SNAPSHOT,\
-  org.terracotta.modules.guimodels-config;bundle-version:=3.2.1.SNAPSHOT,\
-  org.terracotta.modules.jdk15-preinst-config;bundle-version:=3.2.1.SNAPSHOT,\
-  org.terracotta.modules.standard-config;bundle-version:=3.2.1.SNAPSHOT
+  org.terracotta.modules.excludes-config;bundle-version:=3.2.1,\
+  org.terracotta.modules.guimodels-config;bundle-version:=3.2.1,\
+  org.terracotta.modules.jdk15-preinst-config;bundle-version:=3.2.1,\
+  org.terracotta.modules.standard-config;bundle-version:=3.2.1
 l1.modules.additional =
 l1.modules.tc-version-check =
 
