--- a/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.terracotta.samples.ehcache</groupId>
   <artifactId>colorcache</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>3.2.1</version>
   <name>ColorCache</name>
   <packaging>war</packaging>
 
