--- a/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/hibernate/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.terracotta.samples.ehcache.hibernate</groupId>
   <artifactId>events</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>3.2.1</version>
   <name>Events</name>
   <packaging>war</packaging>
 
