--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -13,6 +13,9 @@ ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checke
 quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-update-list.properties
 ### End default
 
+### Quartz
+default.QuartzChangeLog=https://jira.terracotta.org/jira/browse/QTZ?report=com.atlassian.jira.plugin.system.project:changelog-panel
+
 ### 3.2.1 
 3.2.1.SessionsExpress=http://www.terracotta.org/documentation/ga/product-documentation
 
