--- a/update-checker/quartz-update-list.properties
+++ b/update-checker/quartz-update-list.properties
@@ -4,7 +4,7 @@
 ## 1.7.3 -- latest release
 #1.7.3.updates			= 
 #1.7.3.notices			= 1.7.3 is the latest GA release
-#1.7.3.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&0pageID=QuartzChangeLog
+#1.7.3.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&pageID=QuartzChangeLog
 
 #1.7.3-SNAPSHOT.updates=1.7.3
 
@@ -12,18 +12,18 @@
 ## 1.7.2 
 #1.7.2.updates			= 1.7.3
 #1.7.2.notices			= We recommend upgrading to 1.7.3, our latest GA release
-#1.7.2.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&0pageID=QuartzChangeLog
+#1.7.2.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&pageID=QuartzChangeLog
 #1.7.2-SNAPSHOT.updates = 1.7.3
 
 ## 1.7.1
 #1.7.1.updates			= 1.7.3
 #1.7.1.notices			= We recommend upgrading to 1.7.3, our latest GA release
-#1.7.1.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&0pageID=QuartzChangeLog
+#1.7.1.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&pageID=QuartzChangeLog
 #1.7.1-SNAPSHOT.updates = 1.7.3
 
 ## 1.7.0 -- latest release
 #1.7.0.updates			= 
 #1.7.0.notices			= We recommend upgrading to 1.7.3, our latest GA release
-#1.7.0.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&0pageID=QuartzChangeLog
+#1.7.0.release-notes	= http://www.terracotta.org/kit/reflector?KitID=default&pageID=QuartzChangeLog
 #1.7.0-SNAPSHOT.updates = 1.7.3
 
