--- a/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/branches/3.2/code/base/buildconfig/distribution/external-resources.yml
@@ -57,7 +57,7 @@ artifacts:
   - maven_artifact: false
     name: ehcache.xml
     destination: ehcache
-    url: http://svn.terracotta.org/svn/forge/projects/terracotta-ehcache/branches/tc-3.2/src/main/config/ehcache.xml
+    url: http://svn.terracotta.org/svn/ehcache/trunk/core/src/main/config/ehcache.xml
     
   - maven_artifact: false
     name: ehcache.xsd
