--- a/dso/trunk/code/demos/ehcache/colorcache/pom.xml
+++ b/dso/trunk/code/demos/ehcache/colorcache/pom.xml
@@ -29,6 +29,7 @@
           <target>1.5</target>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>maven-jetty-plugin</artifactId>
         <version>6.1.15</version>
@@ -37,6 +38,12 @@
           <contextPath>${name}</contextPath>
           <stopKey>STOP</stopKey>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.terracotta.maven.plugins</groupId>
+        <artifactId>tc-maven-plugin</artifactId>
+        <version>1.6.0-SNAPSHOT</version>
       </plugin>
     </plugins>
   </build>
@@ -51,7 +58,7 @@
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-terracotta</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.1.0-SNAPSHOT</version>
       <scope>runtime</scope>
     </dependency>      
 
