--- a/dso/trunk/code/demos/ehcache/hibernate/pom.xml
+++ b/dso/trunk/code/demos/ehcache/hibernate/pom.xml
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-terracotta</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.1.0-SNAPSHOT</version>
     </dependency>      
 
     <dependency>
@@ -132,6 +132,12 @@
             <version>${h2.version}</version>
           </dependency>
         </dependencies>
+      </plugin>
+
+      <plugin>
+        <groupId>org.terracotta.maven.plugins</groupId>
+        <artifactId>tc-maven-plugin</artifactId>
+        <version>1.6.0-SNAPSHOT</version>
       </plugin>
     </plugins>
   </build>
