--- a/dso/branches/3.2/code/demos/ehcache/colorcache/build.xml
+++ b/dso/branches/3.2/code/demos/ehcache/colorcache/build.xml
@@ -19,7 +19,7 @@
 	
   <property name="warfile"        value="ColorCache.war"/>
   <property name="servlet.jar"    value="${basedir}/../../../lib/servlet-api-2.5-6.1.8.jar"/>
-  <property name="ehcache.jar"    value="${basedir}/web/WEB-INF/lib/ehcache-core-2.0.0-SNAPSHOT.jar"/>
+  <property name="ehcache.jar"    value="${basedir}/web/WEB-INF/lib/ehcache-core-2.0.0.jar"/>
   <property name="slf4j-api.jar"  value="${basedir}/web/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
   <property name="slf4j-impl.jar" value="${basedir}/web/WEB-INF/lib/slf4j-jdk14-1.5.8.jar"/>
   <property name="src.dir"        value="src/main/java"/>
