--- a/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
+++ b/dso/branches/3.2/code/demos/ehcache/colorcache/pom.xml
@@ -52,13 +52,13 @@
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-core</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>      
 
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-terracotta</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
       <scope>runtime</scope>
     </dependency>      
 
