--- a/dso/trunk/code/base/buildconfig/distribution/external-resources.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/external-resources.yml
@@ -57,7 +57,7 @@ artifacts:
   - maven_artifact: false
     name: ehcache.xml
     destination: ehcache
-    url: http://svn.terracotta.org/svn/forge/projects/terracotta-ehcache/trunk/src/main/config/ehcache.xml
+    url: https://svn.terracotta.org/repo/ehcache/trunk/core/src/main/config/ehcache-terracotta.xml
     
   - maven_artifact: false
     name: ehcache.xsd
