--- a/dso/trunk/code/demos/ehcache/hibernate/pom.xml
+++ b/dso/trunk/code/demos/ehcache/hibernate/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache-core</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>      
 
     <dependency>
