--- a/dso/branches/3.2/code/base/pom.xml
+++ b/dso/branches/3.2/code/base/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>org.terracotta</groupId>
   <artifactId>parent</artifactId>
-  <version>3.2.1</version>
+  <version>3.2.2-SNAPSHOT</version>
   <name>terracotta base</name>
   <packaging>pom</packaging>
 
@@ -35,7 +35,7 @@
   </licenses>
 
   <properties>
-    <tcVersion>3.2.1</tcVersion>
+    <tcVersion>3.2.2-SNAPSHOT</tcVersion>
     <sigar.version>1.6.3</sigar.version>
     <jetty.version>6.1.8</jetty.version>
   </properties>
