INT-959: Updated links for 3.2.1 getting started and TerracottaQuickStart

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -22,7 +22,7 @@ default.QuartzChangeLog=https://jira.terracotta.org/jira/browse/QTZ?report=com.a
 3.2.1.AboutConfigurationFiles=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.1.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.1.ToolsOverview=http://www.terracotta.org/documentation/ga/product-documentation
-3.2.1.GettingStarted=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
+3.2.1.GettingStarted=http://www.terracotta.org/start
 3.2.1.Register=http://www.terracotta.org/account/
 3.2.1.Documentation=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.1.Forums=http://forums.terracotta.org/forums/forums/list.page
@@ -33,7 +33,7 @@ default.QuartzChangeLog=https://jira.terracotta.org/jira/browse/QTZ?report=com.a
 3.2.1.HA=http://www.terracotta.org/documentation/ga/product-documentation
 3.2.1.EhcacheQuickStart=http://www.ehcache.org
 3.2.1.QuartzQuickStart=http://www.quartz-scheduler.org/
-3.2.1.TerracottaQuickStart=http://www.terracotta.org/confluence/display/docs/Release+Notes+3.2.1+Beta
+3.2.1.TerracottaQuickStart=http://www.terracotta.org/start
 3.2.1.SessionsExpress=http://www.terracotta.org/documentation/ga/product-documentation
 
 #              ### Start 3.2.1 DSO docs ###
