--- a/update-checker/update-list.properties
+++ b/update-checker/update-list.properties
@@ -1,54 +1,58 @@
 ## Top level keys
-# terracotta.versions = 3.2.0, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1, 3.1.1,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
+# terracotta.versions = 3.2.1, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1, 3.1.1, 3.1.1-stable1, 3.1.1-stable0, 3.1.1, 3.1.1, 3.1.1,  2.6.0, 2.6-stable4, 2.6-stable1, 2.6-stable0, 2.5.4, 2.5.2, 2.5.1, 2.5.0, 2.5-stable1, 2.5-stable1, 2.5-stable0
 # 2.4.8, 2.4.5, 2.4.4, 2.4.3, 2.4.2, 2.4.1, 2.4.0, 2.4-stable1, 2.4-stable0
 # 2.3.0, 2.3-stable1, 2.3-stable0
 # general.notice = This notice should rarely, if ever, be used as everyone running the console\nwill see it
 
 
-## 3.2.0 -- latest release
-3.2.0.updates			= 
-3.2.0.notices			= 3.2.0 is the latest GA release from Terracotta
-3.2.0.release-notes	= http://www.terracotta.org/confluence/display/docs/Release+Notes
+## 3.2.1 -- latest release
+3.2.1.updates			= 
+3.2.1.notices			= 3.2.1 is the latest GA release from Terracotta
+3.2.1.release-notes	= http://www.terracotta.org/confluence/display/docs/Release+Notes
 
-## 3.1.1 -- latest release
+## 3.2.0 
+3.2.0.updates 		= 3.2.0
+3.2.0.notices		= Terracotta recommends upgrading to the latest release, 3.2.1, for best results
+3.2.0.release-notes	= http://www.terracotta.org/confluence/display/docs32/Release+Notes
+## 3.1.1 
 3.1.1.updates			= 
-3.1.1.notices			= 3.2.0 is the latest GA release from Terracotta
+3.1.1.notices			= Terracotta recommends upgrading to the latest releaes, 3.2.1, for best results
 3.1.1.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 ## 3.1.0 
-3.1.0.updates			= 3.2.0
-3.1.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.2.0, for best results
+3.1.0.updates			= 3.2.1
+3.1.0.notices			= Terracotta recommends upgrading to the latest release, 3.2.1, for best results
 3.1.0.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 
 ## 3.0.1 -- 
-3.0.1.updates			= 3.2.0
-3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.2.0, for best results
+3.0.1.updates			= 3.2.1
+3.0.1.notices			= Terracotta recommends upgrading to the latest stable build, 3.2.1, for best results
 3.0.1.release-notes	= http://www.terracotta.org/confluence/display/docs30/Home
 
 ## 3.0.0 -- 
-3.0.0.updates			= 3.2.0
-3.0.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.2.0, for best results
+3.0.0.updates			= 3.2.1
+3.0.0.notices			= Terracotta recommends upgrading to the latest stable build, 3.2.1, for best results
 3.0.0.release-notes	= http://www.terracotta.org/confluence/display/docs31/Home
 
 
 ## 2.7.3 -- Latest 2.7 version
-2.7.3.updates			= 3.2.0
-2.7.3.notices			= This is the latest 2.7 Terracotta version. 3.2.0 is the latest release
+2.7.3.updates			= 3.2.1
+2.7.3.notices			= This is the latest 2.7 Terracotta version. 3.2.1 is the latest release
 2.7.3.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.2
-2.7.2.updates			= 3.2.0
-2.7.2.notices			= Terracotta recommends upgrading to the latest release, 3.2.0, for best results
+2.7.2.updates			= 3.2.1
+2.7.2.notices			= Terracotta recommends upgrading to the latest release, 3.2.1, for best results
 2.7.2.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.1
-2.7.1.updates			= 3.2.0
-2.7.1.notices			= Terracotta recommends upgrading to the latest release, 3.2.0, for best results
+2.7.1.updates			= 3.2.1
+2.7.1.notices			= Terracotta recommends upgrading to the latest release, 3.2.1, for best results
 2.7.1.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
 ## 2.7.0 
-2.7.0.updates			= 3.2.0
-2.7.0.notices			= Terracotta recommends upgrading to the latest release, 3.2.0, for best results
+2.7.0.updates			= 3.2.1
+2.7.0.notices			= Terracotta recommends upgrading to the latest release, 3.2.1, for best results
 2.7.0.release-notes	=  http://www.terracotta.org/confluence/display/docs27/Home
 
