--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -524,6 +524,9 @@ tc.management.test.mbeans.enabled = false
 #    debug.invalidate           : Log session invalidation
 #    vhosts.excluded            : Comma separated list of virtual hosts that should never use Terracotta clustered sessions (tomcat only)
 #    debug.sessions             : Output additional debug information when sessions are looked up, created, etc
+#    copy.on.read               : For serialized sessions, deserialized attributes on every call to getAttribute()
+#    clear.on.access            : For serialized sessions, clear any local materialized/deserialized attributes at the start of each request
+#                                 This is a good approximation of a server hop between each request
 ###########################################################################################
 #session.id.length = 20
 #session.serverid =
