--- a/dso/trunk/code/base/pom.xml
+++ b/dso/trunk/code/base/pom.xml
@@ -301,6 +301,12 @@
         <version>${sigar.version}</version>
         <type>dylib</type>
       </dependency>
+      <dependency>
+        <groupId>org.hyperic</groupId>
+        <artifactId>libsigar-universal64-macosx</artifactId>
+        <version>${sigar.version}</version>
+        <type>dylib</type>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
