--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -12,7 +12,7 @@ default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/update
 ehcache.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-update-list.properties
 ehcache.monitor.update.properties=http://svn.terracotta.org/svn/tc/update-checker/ehcache-monitor-update-list.properties
 quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-update-list.properties
-HA=http://www.terracotta.org/documentation/ga/product-documentation
+default.HA=http://www.terracotta.org/documentation/ga/product-documentation
 ### End default
 
 ### Quartz
