INT-968: Update tcbuild to support kit version in kit file name.
Added kitversion to set of variables supported in buildconfig files,
and enhanced variable interpolation to support bracketed expressions.

--- a/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-enterprise.def.yml
@@ -1,7 +1,7 @@
 name: Terracotta DSO
 internal_name: dso
-kit_name_pattern: terracotta-version-ee
-root_directory: terracotta-version-ee
+kit_name_pattern: terracotta-version{_kitversion}-ee
+root_directory: terracotta-version{_kitversion}-ee
 bundled_demos:
   - pojo:
       install_directory: platform/samples/pojo
