--- a/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/dso-opensource.def.yml
@@ -1,7 +1,7 @@
 name: Terracotta DSO
 internal_name: dso
-kit_name_pattern: terracotta-version
-root_directory: terracotta-version
+kit_name_pattern: terracotta-version{_kitversion}
+root_directory: terracotta-version{_kitversion}
 bundled_demos:
   - pojo:
       install_directory: platform/samples/pojo
