--- a/dso/branches/3.2.1_1/code/base/buildconfig/distribution/web-opensource.def.yml
+++ b/dso/branches/3.2.1_1/code/base/buildconfig/distribution/web-opensource.def.yml
@@ -51,7 +51,7 @@ bundled_components:
       install_directory: eclipse
 bundled_modules:
   - core:
-      install_directory: eclipse/org.terracotta.dso/modules
+      install_directory: eclipse/org.terracotta.dso/platform/modules
       manifest:
         - clustered-surefire-2.3
         - excludes-config
