DEV-3937, DEV-3932, DEV-3956, fixes

--- a/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/trunk/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -140,6 +140,7 @@ l2.objectmanager.dgc.throttle.requestsPerThrottle = 1000
 l2.objectmanager.dgc.young.enabled = false
 l2.objectmanager.dgc.young.frequencyInMillis = 180000
 l2.objectmanager.dgc.faulting.optimization = true
+l2.objectmanager.dgc.enterpriseMarkStageInterval = 1000;
 l2.data.backup.throttle.timeInMillis = 0
 
 ###########################################################################################
