--- a/dso/trunk/code/base/buildconfig/distribution/web-opensource.def.yml
+++ b/dso/trunk/code/base/buildconfig/distribution/web-opensource.def.yml
@@ -6,7 +6,7 @@
 
 name: Website Product Content
 internal_name: web
-kit_name_pattern: terracotta-eclipse-plugin-version
+kit_name_pattern: terracotta-eclipse-plugin-version{_kitversion}
 root_directory: web
 bundled_components:
   - common:
