pull in trunk changes

--- a/dso/branches/expressive/code/base/common/src.resources/com/tc/properties/tc.properties
+++ b/dso/branches/expressive/code/base/common/src.resources/com/tc/properties/tc.properties
@@ -112,6 +112,8 @@ l2.transactionmanager.passive.throttle.maxSleepSeconds= 5
 # dgc.faulting.optimization      - This property will not fault in objects that has no references during DGC mark stage
 #                                   false - disable faulting optimization
 #                                   true - enabled with compressed implementation (spare oids)
+# dgc.enterpriseMarkStageInterval - The time between tokens are sent to see if each L2 finished marking (collect/rescue).
+#                                   This is for enterprise only.
 # data.backup.throttle.timeInMillis - time to sleep between copying of each file from the db
 #                                     while taking backup
 #
@@ -140,6 +142,7 @@ l2.objectmanager.dgc.throttle.requestsPerThrottle = 1000
 l2.objectmanager.dgc.young.enabled = false
 l2.objectmanager.dgc.young.frequencyInMillis = 180000
 l2.objectmanager.dgc.faulting.optimization = true
+l2.objectmanager.dgc.enterpriseMarkStageInterval = 1000
 l2.data.backup.throttle.timeInMillis = 0
 
 ###########################################################################################
