--- a/dso/branches/expressive/code/base/management-api/src.resources/com/tc/management/management.properties
+++ b/dso/branches/expressive/code/base/management-api/src.resources/com/tc/management/management.properties
@@ -11,6 +11,7 @@ domain.internal           = org.terracotta.internal
 domain.tim                = org.terracotta.tim
 domain.ehcache            = net.sf.ehcache
 domain.ehcache.hibernate  = net.sf.ehcache.hibernate
+domain.quartz             = quartz
 
 # System property that DSO client VMs can set to override their hostname, which defaults to host:port
 system-property.node-name = tc.node-name
