--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -2,6 +2,7 @@
 
 # This is the properties file for the reflector
 ### Start default
+default.cache-config=http://www.terracotta.org/documentation/ga/product-documentation
 default.HA=http://www.terracotta.org/documentation/ga/product-documentation
 default.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
 default.Documentation=http://www.terracotta.org/documentation/
