--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -1,31 +1,37 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache will see it
 
-## 2.0.0 -- latest release
+## 2.0.1 -- latest release
+2.0.1.updates			=
+2.0.1.notices			= 2.0.1 is the latest GA release
+2.0.1.release-notes		= http://ehcache.org/news.html
+
+2.0.1-SNAPSHOT.updates = 2.0.1
+
+## 2.0.0
 2.0.0.updates			=
-2.0.0.notices			= 2.0.0 is the latest GA release
+2.0.0.notices			= 2.0.1 is the latest GA release
 2.0.0.release-notes		= http://ehcache.org/news.html
 
-2.0.0-SNAPSHOT.updates = 2.0.0
+2.0.0-SNAPSHOT.updates = 2.0.1
 
 ## 1.7.2 
-1.7.2.updates			= 2.0.0
-1.7.2.notices			= We recommend upgrading to 2.0.0, our latest GA release
+1.7.2.updates			= 2.0.1
+1.7.2.notices			= We recommend upgrading to 2.0.1, our latest GA release
 1.7.2.release-notes		= http://ehcache.org/news.html
 
-1.7.2-SNAPSHOT.updates  = 2.0.0
+1.7.2-SNAPSHOT.updates  = 2.0.1
 
 ## 1.7.1 -- latest release
-1.7.1.updates			=  2.0.0
-1.7.1.notices			= We recommend upgrading to 2.0.0, our latest GA release
+1.7.1.updates			=  2.0.1
+1.7.1.notices			= We recommend upgrading to 2.0.1, our latest GA release
 1.7.1.release-notes	= http://ehcache.org/news.html
 
-1.7.1-SNAPSHOT.updates = 2.0.0
+1.7.1-SNAPSHOT.updates = 2.0.1
 
 ## 1.7.0 
-1.7.0.updates			= 2.0.0
-1.7.0.notices			= We recommend upgrading to 2.0.0, our latest GA release
+1.7.0.updates			= 2.0.1
+1.7.0.notices			= We recommend upgrading to 2.0.1, our latest GA release
 1.7.0.release-notes	= http://ehcache.org/news.html
 
-1.7.0-SNAPSHOT.updates = 2.0.0
-
+1.7.0-SNAPSHOT.updates = 2.0.1
