--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -3,6 +3,7 @@
 # This is the properties file for the reflector
 ### Start default
 default.ExaminatorQS=http://www.terracotta.org/examinator/quick-start
+default.Examinator=http://www.terracotta.org/examinator/quick-start
 default.cache-config=http://www.terracotta.org/documentation/ga/product-documentation
 default.HA=http://www.terracotta.org/documentation/ga/product-documentation
 default.ProductDocumentation=http://www.terracotta.org/documentation/ga/product-documentation
