--- a/dso/branches/new-tim-api/code/base/modules.def.yml
+++ b/dso/branches/new-tim-api/code/base/modules.def.yml
@@ -134,15 +134,14 @@ modules:
         - dso-statistics-api
         - thirdparty-api
         - management-api
+  - tim-api:
+      options:
+        jdk: J2SE-1.5
+      # NO dependencies!
   - modules-base:
       options:
         jdk: J2SE-1.5
         module: true
-      dependencies:
-        - common-api
-        - license-common
-        - dso-l1-api
-        - deploy-api
   - excludes-config:
       options:
         jdk: J2SE-1.5
