--- a/dso/branches/new-tim-api/code/base/common-api/.classpath
+++ b/dso/branches/new-tim-api/code/base/common-api/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/xmlbeans-jsr173-api-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="/dependencies/lib/xmlbeans-xpath-2.4.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 	<classpathentry exported="true" kind="lib" path="lib/tcconfig-xmlbeans-generated.jar"/>
 </classpath>
