--- a/dso/branches/new-tim-api/code/base/deploy/.classpath
+++ b/dso/branches/new-tim-api/code/base/deploy/.classpath
@@ -33,4 +33,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/sigarstats"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 </classpath>
