--- a/dso/branches/new-tim-api/code/base/dso-common/.classpath
+++ b/dso/branches/new-tim-api/code/base/dso-common/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sigarstats"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 	<classpathentry exported="true" kind="lib" path="lib/tc-l1-reconnect-properties.jar"/>
 </classpath>
