--- a/dso/branches/new-tim-api/code/base/dso-l1-api/.classpath
+++ b/dso/branches/new-tim-api/code/base/dso-l1-api/.classpath
@@ -11,4 +11,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/dso-statistics-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 </classpath>
