--- a/dso/branches/new-tim-api/code/base/dso-statistics-tests/.classpath
+++ b/dso/branches/new-tim-api/code/base/dso-statistics-tests/.classpath
@@ -26,4 +26,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/simulator"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/thirdparty-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 </classpath>
