--- a/dso/branches/new-tim-api/code/base/management/.classpath
+++ b/dso/branches/new-tim-api/code/base/management/.classpath
@@ -14,4 +14,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/dso-statistics-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/management-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 </classpath>
