--- a/dso/branches/new-tim-api/code/base/modules.def.yml
+++ b/dso/branches/new-tim-api/code/base/modules.def.yml
@@ -8,13 +8,19 @@
 # to a module-group as below (spring, dso, container, etc...)
 
 modules:
+  - thirdparty-api:
+      options:
+        jdk: J2SE-1.5
+  - tim-api:
+      options:
+        jdk: J2SE-1.5
+      # XXX: Should be NO deps here!!!
+      dependencies:
+        - thirdparty-api
   - junit-formatter:
       options:
         jdk: J2SE-1.5
   - license-common:
-      options:
-        jdk: J2SE-1.5
-  - thirdparty-api:
       options:
         jdk: J2SE-1.5
   - thirdparty:
@@ -28,6 +34,7 @@ modules:
         javadoc: true
       dependencies:
         - license-common
+        - tim-api
   - common:
       options:
         jdk: J2SE-1.5
@@ -42,6 +49,7 @@ modules:
         - license-common
         - thirdparty
         - thirdparty-api
+        - tim-api
   - dso-statistics-api:
       options:
         jdk: J2SE-1.5
@@ -66,6 +74,7 @@ modules:
         - dso-statistics-api
         - thirdparty-api
         - dso-cluster-api
+        - tim-api
   - dso-common:
       options:
         jdk: J2SE-1.5
@@ -78,6 +87,7 @@ modules:
         - thirdparty-api
         - dso-statistics-api
         - sigarstats
+        - tim-api
   - dso-common-jdk16:
       options:
         jdk: JavaSE-1.6
@@ -109,6 +119,7 @@ modules:
         - dso-l1-api
         - dso-statistics-api
         - management-api
+        - tim-api
   - dso-l2-common:
       options:
         jdk: J2SE-1.5
@@ -134,16 +145,13 @@ modules:
         - dso-statistics-api
         - thirdparty-api
         - management-api
-  - tim-api:
-      options:
-        jdk: J2SE-1.5
-      # XXX: Should be NO deps here!!!
-      dependencies:
-        - thirdparty-api
+        - tim-api
   - modules-base:
       options:
         jdk: J2SE-1.5
         module: true
+      dependencies:
+        - tim-api
   - excludes-config:
       options:
         jdk: J2SE-1.5
@@ -153,6 +161,7 @@ modules:
         - license-common
         - dso-l1-api
         - modules-base
+        - tim-api
   - guimodels-config:
       options:
         jdk: J2SE-1.5
@@ -162,6 +171,7 @@ modules:
         - license-common
         - dso-l1-api
         - modules-base
+        - tim-api
   - jdk15-preinst-config:
       options:
         jdk: J2SE-1.5
@@ -171,6 +181,7 @@ modules:
         - license-common
         - dso-l1-api
         - modules-base
+        - tim-api
   - standard-config:
       options:
         jdk: J2SE-1.5
@@ -181,6 +192,7 @@ modules:
         - dso-l1-api
         - modules-base
         - thirdparty-api
+        - tim-api
   - sigarstats:
       options:
         jdk: J2SE-1.5
@@ -219,9 +231,10 @@ modules:
         - dso-statistics-api
         - management
         - management-api
+        - sigarstats
         - thirdparty
         - thirdparty-api
-        - sigarstats
+        - tim-api
   - dso-memory-datastore:
       options:
         jdk: J2SE-1.5
@@ -272,6 +285,7 @@ modules:
         - sigarstats
         - thirdparty
         - thirdparty-api
+        - tim-api
   - simulator:
       options:
         jdk: J2SE-1.5
@@ -289,6 +303,7 @@ modules:
         - dso-statistics-api
         - license-common
         - management-api
+        - tim-api
   - ui-eclipse:
       options:
         jdk: J2SE-1.5
@@ -310,6 +325,7 @@ modules:
         - management-api
         - thirdparty
         - thirdparty-api
+        - tim-api
   - ui-eclipse-33:
       options:
         jdk: J2SE-1.5
@@ -354,6 +370,7 @@ modules:
         - simulator
         - thirdparty
         - thirdparty-api
+        - tim-api
   - dso-statistics-tests:
       options:
         jdk: J2SE-1.5
@@ -378,6 +395,7 @@ modules:
         - simulator
         - thirdparty
         - thirdparty-api
+        - tim-api
   - dso-system-tests:
       options:
         jdk: J2SE-1.5
@@ -404,6 +422,7 @@ modules:
         - simulator
         - thirdparty
         - thirdparty-api
+        - tim-api
   - dso-alt-boot-jar-tests:
       options:
         jdk: J2SE-1.5
@@ -428,6 +447,7 @@ modules:
         - simulator
         - thirdparty
         - thirdparty-api
+        - tim-api
   - dso-crash-tests:
       options:
         jdk: J2SE-1.5
@@ -456,6 +476,7 @@ modules:
         - sigarstats
         - thirdparty
         - thirdparty-api
+        - tim-api
   - clustered-surefire-2.3:
       options:
         jdk: J2SE-1.5
@@ -467,7 +488,7 @@ modules:
         - dso-l1-api
         - modules-base
         - thirdparty-api
-
+        - tim-api
   - eclipsegen:
       options:
         jdk: J2SE-1.5
