--- a/dso/branches/new-tim-api/code/base/simulator/.classpath
+++ b/dso/branches/new-tim-api/code/base/simulator/.classpath
@@ -16,4 +16,5 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/dso-statistics-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/license-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/management-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/tim-api"/>
 </classpath>
