added bmm tmc security entry

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -34,6 +34,7 @@ quartz.update.properties=http://svn.terracotta.org/svn/tc/update-checker/quartz-
 tmc.update.properties=http://svn.terracotta.org/svn/tc/update-checker/tmc-update-list.properties
 default.TMC=http://terracotta.org/documentation/bigmemorygo/operations/tms
 default.TMCsecurity=http://terracotta.org/documentation/bigmemorygo/operations/tms-security
+default.BMMTMCsecurity=http://terracotta.org/documentation/bigmemorymax/operations/tms-security
 bigmemory.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/bigmemory-update-list.properties
 
 ### End default
