updated link to BigMemory Max release notes - Draft internally viewable only

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -53,7 +53,7 @@ default.BigMemoryBetaLicenseKey=http://www.terracotta.org
 default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
 
 ### BigMemoryMax Info
-default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/Vicente+-+TP1+-+TP2+-+FCS+Release+Notes
+default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
 
 ### Start 3.7.0
 3.7.0.AboutConfigurationFiles=http://www.terracotta.org/documentation/product-documentation.html
