--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -2,45 +2,72 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache will see it
 
 
-## 2.6.2 -- latest release
-2.6.2.updates			= 
+## 2.6.3 -- latest release
+2.6.3.updates			= 
+2.6.3.notices			= This is the latest GA release.
+2.6.3.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.6
+
+## 2.6.2
+2.6.2.updates			= 2.6.3
 2.6.2.notices			= This is the latest GA release.
 2.6.2.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.6
 
 
 ## 2.6.0
-2.6.0.updates			= 
-2.6.0.notices			= We recommend upgrading to 2.6.2, our latest GA release
+2.6.0.updates			= 2.6.3
+2.6.0.notices			= We recommend upgrading to 2.6.3, our latest GA release
 2.6.0.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
 
+
+## 2.5.7
+2.5.7.updates			= 2.6.3
+2.5.7.notices			= We recommend upgrading to 2.6.3, our latest GA release
+2.5.7.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
+
+2.5.6-SNAPSHOT.updates = 2.6.3
+
+## 2.5.6
+2.5.6.updates			= 2.6.3
+2.5.6.notices			= We recommend upgrading to 2.6.3, our latest GA release
+2.5.6.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
+
+2.5.6-SNAPSHOT.updates = 2.5.6
+
+## 2.5.5
+2.5.5.updates			= 2.6.3
+2.5.5.notices			= We recommend upgrading to 2.6.3, our latest GA release
+2.5.5.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
+
+2.5.5-SNAPSHOT.updates = 2.6.3
+
+
 ## 2.5.4 
-2.5.4.updates			= 
-2.5.4.notices			= We recommend upgrading to 2.6.2, our latest GA release
+2.5.4.updates			= 2.6.3
+2.5.4.notices			= We recommend upgrading to 2.6.3, our latest GA release
 2.5.4.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
 
-2.5.2-SNAPSHOT.updates = 2.5.2
+2.5.2-SNAPSHOT.updates = 2.6.3
 
 ## 2.5.2 
-2.5.2.updates			= 2.6.2
-2.5.2.notices			= We recommend upgrading to 2.6.2, our latest GA release
+2.5.2.updates			= 2.6.3
+2.5.2.notices			= We recommend upgrading to 2.6.3, our latest GA release
 2.5.2.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
 
-2.5.2-SNAPSHOT.updates = 2.6.2
+2.5.2-SNAPSHOT.updates = 2.6.3
 
 ## 2.5.1
 2.5.1.updates			= 
-2.5.1.notices			= We recommend upgrading to 2.6.2, our latest GA release
+2.5.1.notices			= We recommend upgrading to 2.6.3, our latest GA release
 2.5.1.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
 
-2.5.1-SNAPSHOT.updates = 2.6.2
+2.5.1-SNAPSHOT.updates = 2.6.3
 
 ## 2.5.0
 2.5.0.updates			= 2.5.2
 2.5.0.notices			= We recommend upgrading to 2.5.2, our latest GA release
 2.5.0.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.5
 
-2.5.0-SNAPSHOT.updates = 2.6.2
-
+2.5.0-SNAPSHOT.updates = 2.6.3
 
 ## 2.4 Releases
 
