added bmg 4.0 links; info on reflector-link format

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -1,6 +1,17 @@
 
 
 # This is the properties file for the reflector
+#
+# This is how links are mapped. Start with a key-value composed of a string (usually a kit version followed by a page ID) mapped to an URL:
+# 
+# 2.4.PojoQuickStart=http://www.terracotta.org/confluence/display/docs24/POJO+Quick+Start
+#
+# This corresponds to an external URL that looks like:
+#
+# http://www.terracotta.org/kit/reflector?kitID=2.4&pageID=PojoQuickStart
+#
+# This external (or reflector) URL is what's put into kit READMEs and embedded in code, etc.
+
 ### Start default
 default.AboutConfigurationFiles=http://terracotta.org/documentation/overview
 default.cache-config=http://www.terracotta.org/documentation/product-documentation
@@ -51,6 +62,10 @@ default.BigMemoryQuickStart=http://terracotta.org/documentation/bigmemory/get-st
 default.BigMemoryEhcache=http://www.ehcache.org/documentation/bigmemory/index
 default.BigMemoryBetaLicenseKey=http://www.terracotta.org
 default.BigMemoryReleaseNotes=http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
+
+### BigMemory Go 4.0
+4.0.BMGTechFaq=http://terracotta.org/documentation/bigmemorygo/technical-faq
+4.0.BMGGetStarted=http://terracotta.org/documentation/bigmemorygo/get-started
 
 ### BigMemoryMax Info
 default.BigMemoryMaxReleaseNotes=http://www.terracotta.org/confluence/display/rel/BigMemory+Max+4.0.0+Release+Notes
