--- a/update-checker/quartz-update-list.properties
+++ b/update-checker/quartz-update-list.properties
@@ -3,63 +3,69 @@
 # general.notice = This notice should rarely, if ever, be used as everyone running quartz will see it
 
 
+## 2.1.7 -- latest release
+2.1.7.updates			= 
+2.1.7.notices			= 2.1.7 is the latest GA release
+2.1.7.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
+2.1.7-SNAPSHOT.updates=2.1.7
 
-## 2.1.6 -- latest release
-2.1.6.updates			= 
-2.1.6.notices			= 2.1.6 is the latest GA release
+
+## 2.1.6 
+2.1.6.updates			= 2.1.7
+2.1.6.notices			= 2.1.7 is the latest GA release
 2.1.6.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.6-SNAPSHOT.updates=2.1.6
+2.1.6-SNAPSHOT.updates=2.1.7
 
 ## 2.1.4
-2.1.4.updates			= 2.1.6
-2.1.4.notices			= 2.1.6 is the latest GA release
+2.1.4.updates			= 2.1.7
+2.1.4.notices			= 2.1.7 is the latest GA release
 2.1.4.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.4-SNAPSHOT.updates=2.1.6
+2.1.4-SNAPSHOT.updates=2.1.7
 
 
 ## 2.1.3 
 2.1.3.updates			= 
-2.1.3.notices			= 2.1.6 is the latest GA release
+2.1.3.notices			= 2.1.7 is the latest GA release
 2.1.3.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.3-SNAPSHOT.updates=2.1.6
+2.1.3-SNAPSHOT.updates=2.1.7
 
 
 
 ## 2.1.2
-2.1.2.updates			= 2.1.6
-2.1.2.notices			= 2.1.6 is the latest GA release
+2.1.2.updates			= 2.1.7
+2.1.2.notices			= 2.1.7 is the latest GA release
 2.1.2.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.2-SNAPSHOT.updates=2.1.6
+2.1.2-SNAPSHOT.updates=2.1.7
 
 ## 2.1.1 
-2.1.1.updates			= 2.1.6
-2.1.1.notices			= 2.1.6 is the latest GA release
+2.1.1.updates			= 2.1.7
+2.1.1.notices			= 2.1.7 is the latest GA release
 2.1.1.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.1-SNAPSHOT.updates=2.1.6
+2.1.1-SNAPSHOT.updates=2.1.7
 
 ## 2.1.0 
-2.1.0.updates			= 2.1.6
-2.1.0.notices			= 2.1.6 is the latest GA release
+2.1.0.updates			= 2.1.7
+2.1.0.notices			= 2.1.7 is the latest GA release
 2.1.0.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.1.0-SNAPSHOT.updates=2.1.6
+2.1.0-SNAPSHOT.updates=2.1.7
 
 ## 2.0.2
-2.0.2.updates			= 2.1.6
-2.0.2.notices			= 2.1.6 is the latest GA release
+2.0.2.updates			= 2.1.7
+2.0.2.notices			= 2.1.7 is the latest GA release
 2.0.2.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.0.2-SNAPSHOT.updates=2.1.6
+2.0.2-SNAPSHOT.updates=2.1.7
 
 ## 2.0.1 
-2.0.1.updates			= 2.1.6
-2.0.1.notices			= 2.1.6 is the latest GA release
+2.0.1.updates			= 2.1.7
+2.0.1.notices			= 2.1.7 is the latest GA release
 2.0.1.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.0.1-SNAPSHOT.updates=2.1.6
+2.0.1-SNAPSHOT.updates=2.1.7
 
 ## 2.0.0
-2.0.0.updates			= 2.1.6
-2.0.0.notices			= 2.1.6 is the latest 2.0 GA release
+2.0.0.updates			= 2.1.7
+2.0.0.notices			= 2.1.7 is the latest 2.0 GA release
 2.0.0.release-notes	= http://www.terracotta.org/kit/reflector?kitID=default&pageID=QuartzChangeLog
-2.0.0-SNAPSHOT.updates=2.1.6
+2.0.0-SNAPSHOT.updates=2.1.7
 
 
 ## 1.8.5 -- latest 1.8 release
