added link for tms-troubleshooting

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -48,6 +48,8 @@ default.TMCsecurity=http://terracotta.org/documentation/tms/tms-security
 default.BMMTMCsecurity=http://terracotta.org/documentation/tms/tms-security
 bigmemory.default.update.properties=http://svn.terracotta.org/svn/tc/update-checker/bigmemory-update-list.properties
 
+default.TMSerrors=http://terracotta.org/documentation/tms/tms-troubleshooting
+
 ### End default
 
 
