added link for sessions get-started

--- a/reflector/reflector.properties
+++ b/reflector/reflector.properties
@@ -52,6 +52,8 @@ default.TMSerrors=http://terracotta.org/documentation/tms/tms-troubleshooting
 
 ### End default
 
+### Sessions 4.0
+4.0.GetStarted=http://terracotta.org/documentation/4.0/web-sessions/get-started
 
 ### Quartz
 Default.RenewQuartzLicense=http://terracotta.org/license/quartz-manager-license-update
