INT-2326 - update versions 4.0.1 and 2.7.1

--- a/update-checker/ehcache-update-list.properties
+++ b/update-checker/ehcache-update-list.properties
@@ -1,7 +1,17 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running ehcache will see it
+## 2.7.1 -- latest release
+2.7.1.updates			= 
+2.7.1.notices			= This is the latest GA release.
+2.7.1.release-notes		= http://www.terracotta.org/confluence/display/release/Home
 
-## 2.6.5 -- latest release
+## 2.7.0 -- 
+2.7.0.updates			= 2.7.1
+2.7.0.notices			= We recommend upgrading to 2.7.1 GA release
+2.7.0.release-notes		= http://www.terracotta.org/confluence/display/release/Home
+
+
+## 2.6.5 -- Last published 2.6.x release
 2.6.5.updates			= 
 2.6.5.notices			= This is the latest GA release.
 2.6.5.release-notes		= http://www.terracotta.org/confluence/display/release/Release+Notes+Ehcache+Core+2.6
