--- a/update-checker/bigmemory-update-list.properties
+++ b/update-checker/bigmemory-update-list.properties
@@ -1,11 +1,18 @@
 ## Top level keys
 # general.notice = This notice should rarely, if ever, be used as everyone running BigMemory will see it
 
+4.0.1.updates			= 
+4.0.1.notices			= This is the latest GA release.
+4.0.1.release-notes		=http://www.terracotta.org/confluence/display/release/Home
 
-3.7.2.updates			= 
-3.7.1.notices			= This is the latest GA release.
+4.0.0.updates			= 4.0.1
+4.0.0.notices			= Please upgrade to the latest release of BigMemory
+4.0.0.release-notes		= http://www.terracotta.org/confluence/display/release/Home
+
+3.7.2.updates			= 4.0.1
+3.7.1.notices			= Please upgrade to the latest release of BigMemory
 3.7.1.release-notes		= http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
 
-3.7.1.updates			= 3.7.2
+3.7.1.updates			= 4.0.1
 3.7.1.notices			= Please upgrade to the latest release of BigMemory
 3.7.1.release-notes		= http://www.terracotta.org/confluence/display/release/BigMemory+Go+3.7+Release+Notes
